# docs

./: .env  .env.example  .env.sales.example  .gitignore  AGENTS.md  README.md  TURSO-BROWSER-RAG.md  cloudflare-pages.md  index.md  package.json  skills-lock.json  tsconfig.typedoc.json  typedoc.json  vite.config.ts  voweldocs-README.md  worker.ts  wrangler.toml
.vitepress/: config.ts  local-search-dedup.ts
guide/: TRANSCRIPTS.md  actions.md  adapters.md  connection-models.md  event-notifications.md  getting-started.md  hosted-realtime-api.md  installation.md  nextjs.md  quick-start.md  react-router.md  react.md  self-hosted-stack.md  standalone-js.md  tanstack-router.md  v2-api-migration.md  vowel-client.md  vowelbot.md  vue-router.md  web-component.md  webmcp.md
platform/: apps-and-management.md  billing-and-organizations.md  hosted-realtime-api.md  index.md  vowelbot.md
public/: _headers  _redirects  rag-documents.yml  rag-index.yml  vowel-client.css
recipes/: connection-paradigms.md  custom-actions.md  dynamic-context.md  ecommerce.md  event-notifications.md  index.md  navigation.md  page-automation.md  speaking-state.md  trusted-server.md  webmcp.md
scripts/: build-rag.py  check-sales-env.mjs  patch-client-css.mjs  pyproject.toml  sanitize-generated-api.mjs
scripts/llama-b8676/: libggml-base.so.0  libggml-base.so.0.9.11  libggml.so.0  libggml.so.0.9.11  libllama.so.0  libllama.so.0.0.8676  libmtmd.so.0  libmtmd.so.0.0.8676  llama-bench  llama-debug-template-parser  llama-gguf-split  llama-quantize  llama-template-analysis  llama-tokenize  rpc-server
(+72 files in other folders)
